--- a/ebook-website/scss/_bootstrap.scss
+++ b/ebook-website/scss/_bootstrap.scss
@@ -10,7 +10,7 @@ $light: #f3f6f9;
 // Navbar
 $navbar-padding-y: 1rem;
 $navbar-dark-color: #fff;
-$navbar-dark-hover-color: $secondary-color;
+$navbar-dark-hover-color: $secondary;
 
 // Buttons
 $button-radius: 50px;
