--- a/ebook-website/scss/_styles.scss
+++ b/ebook-website/scss/_styles.scss
@@ -1,3 +1,14 @@
 .header {
   background: url('../img/header-background.jpg') no-repeat center / cover;
 }
+
+@media (max-width: 1000px) {
+  .hero .image-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .hero .text-container {
+    text-align: center;
+  }
+}
