--- a/ebook-website/css/main.css
+++ b/ebook-website/css/main.css
@@ -1,3 +1,10 @@
+.navbar {
+  transition: all 0.5s ease-in-out; }
+
+.navbar-sticky {
+  opacity: 0.9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
+
 .header {
   background: url("../img/header-background.jpg") no-repeat center/cover; }
 
