--- a/ebook-website/scss/_bootstrap.scss
+++ b/ebook-website/scss/_bootstrap.scss
@@ -48,4 +48,7 @@ $line-height-base: 1.7;
 // Headings
 $headings-margin-bottom: $spacer * 1;
 
+// Negative Margins
+$enable-negative-margins: true;
+
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
