--- a/ebook-website/css/main.css
+++ b/ebook-website/css/main.css
@@ -19,11 +19,36 @@
   transition: all 0.3s ease-in;
   cursor: pointer; }
 
+footer .nav .nav-item .nav-link {
+  position: relative; }
+
+footer .nav .nav-item .nav-link::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background-color: #10bcee;
+  width: 0%;
+  height: 4px;
+  transition: all 0.3s ease-in; }
+
+footer .nav .nav-item .nav-link:hover::after {
+  width: 100%; }
+
 @media (max-width: 1000px) {
   .hero .image-container {
     display: flex;
     justify-content: center; }
   .hero .text-container {
+    text-align: center; } }
+
+@media (max-width: 600px) {
+  footer .nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center; } }
 
 /*!
