--- a/ebook-website/css/main.css
+++ b/ebook-website/css/main.css
@@ -44,6 +44,10 @@ footer .nav .nav-item .nav-link:hover::after {
   .hero .text-container {
     text-align: center; } }
 
+@media (max-width: 960px) {
+  .navbar ul {
+    text-align: center; } }
+
 @media (max-width: 600px) {
   footer .nav {
     display: flex;
@@ -2487,7 +2491,7 @@ textarea.form-control-lg {
   z-index: 4; }
 
 .btn {
-  --bs-btn-padding-x: 30px;
+  --bs-btn-padding-x: 20px;
   --bs-btn-padding-y: 10px;
   --bs-btn-font-family: ;
   --bs-btn-font-size: 1rem;
@@ -2832,13 +2836,13 @@ textarea.form-control-lg {
 
 .btn-lg, .btn-group-lg > .btn {
   --bs-btn-padding-y: 10px;
-  --bs-btn-padding-x: 30px;
+  --bs-btn-padding-x: 20px;
   --bs-btn-font-size: 1.25rem;
   --bs-btn-border-radius: 50px; }
 
 .btn-sm, .btn-group-sm > .btn {
   --bs-btn-padding-y: 10px;
-  --bs-btn-padding-x: 30px;
+  --bs-btn-padding-x: 20px;
   --bs-btn-font-size: 0.875rem;
   --bs-btn-border-radius: 50px; }
 
@@ -3190,8 +3194,8 @@ textarea.form-control-lg {
     border-bottom-left-radius: 0; }
 
 .dropdown-toggle-split {
-  padding-right: 22.5px;
-  padding-left: 22.5px; }
+  padding-right: 15px;
+  padding-left: 15px; }
   .dropdown-toggle-split::after,
   .dropup .dropdown-toggle-split::after,
   .dropend .dropdown-toggle-split::after {
@@ -3200,12 +3204,12 @@ textarea.form-control-lg {
     margin-right: 0; }
 
 .btn-sm + .dropdown-toggle-split, .btn-group-sm > .btn + .dropdown-toggle-split {
-  padding-right: 22.5px;
-  padding-left: 22.5px; }
+  padding-right: 15px;
+  padding-left: 15px; }
 
 .btn-lg + .dropdown-toggle-split, .btn-group-lg > .btn + .dropdown-toggle-split {
-  padding-right: 22.5px;
-  padding-left: 22.5px; }
+  padding-right: 15px;
+  padding-left: 15px; }
 
 .btn-group-vertical {
   flex-direction: column;
