--- a/vera-software-solutions/css/main.css
+++ b/vera-software-solutions/css/main.css
@@ -10136,3 +10136,11 @@ textarea.form-control-lg {
     display: inline-flex !important; }
   .d-print-none {
     display: none !important; } }
+
+.header {
+  min-height: 1000px;
+  background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header-background.jpg") no-repeat center/cover; }
+
+@media (max-width: 992px) {
+  .navbar {
+    background: var(--bs-dark); } }
