--- a/vera-software-solutions/css/main.css
+++ b/vera-software-solutions/css/main.css
@@ -10141,6 +10141,10 @@ textarea.form-control-lg {
   min-height: 1000px;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header-background.jpg") no-repeat center/cover; }
 
+.header .slide {
+  width: 90%;
+  margin: 0 auto; }
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark); } }
