--- a/vera-software-solutions/scss/_styles.scss
+++ b/vera-software-solutions/scss/_styles.scss
@@ -8,6 +8,11 @@
     url('../img/header-background.jpg') no-repeat center / cover;
 }
 
+.header .slide {
+  width: 90%;
+  margin: 0 auto;
+}
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark);
