--- a/vera-software-solutions/css/main.css
+++ b/vera-software-solutions/css/main.css
@@ -10145,6 +10145,9 @@ textarea.form-control-lg {
   width: 90%;
   margin: 0 auto; }
 
+.navbar {
+  transition: all 0.5s ease-in-out; }
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark); } }
