--- a/vera-software-solutions/scss/_styles.scss
+++ b/vera-software-solutions/scss/_styles.scss
@@ -17,8 +17,35 @@
   transition: all 0.5s ease-in-out;
 }
 
+.invitation-bg {
+  background: linear-gradient(
+      to bottom right,
+      rgba(0, 0, 0, 0.8),
+      rgba(0, 0, 0, 0.8)
+    ),
+    url('../img/invitation-background.jpg') no-repeat center / cover;
+}
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark);
+  }
+
+  .header {
+    height: 800px;
+    min-height: 800px !important;
+  }
+
+  .register h2 {
+    text-align: center;
+  }
+
+  .register {
+    padding: 40px 0 !important;
+  }
+
+  .summary {
+    margin-top: 0 !important;
+    width: 90% !important;
   }
 }
