--- a/vera-software-solutions/css/main.css
+++ b/vera-software-solutions/css/main.css
@@ -10151,6 +10151,13 @@ textarea.form-control-lg {
 .invitation-bg {
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/invitation-background.jpg") no-repeat center/cover; }
 
+.footer a {
+  text-decoration: none; }
+
+.footer .socials i:hover {
+  color: #f8b547 !important;
+  transition: all 0.25s ease-in; }
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark); }
