--- a/vera-software-solutions/scss/_styles.scss
+++ b/vera-software-solutions/scss/_styles.scss
@@ -26,6 +26,15 @@
     url('../img/invitation-background.jpg') no-repeat center / cover;
 }
 
+.footer a {
+  text-decoration: none;
+}
+
+.footer .socials i:hover {
+  color: $primary !important;
+  transition: all 0.25s ease-in;
+}
+
 @media (max-width: 992px) {
   .navbar {
     background: var(--bs-dark);
