--- a/vera-software-solutions/css/main.css
+++ b/vera-software-solutions/css/main.css
@@ -10142,7 +10142,7 @@ textarea.form-control-lg {
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header-background.jpg") no-repeat center/cover; }
 
 .header .slide {
-  width: 90%;
+  width: 70%;
   margin: 0 auto; }
 
 .navbar {
@@ -10164,10 +10164,24 @@ textarea.form-control-lg {
   .header {
     height: 800px;
     min-height: 800px !important; }
+  .header .slide {
+    width: 90%;
+    margin: 0 auto; }
+  .header .text-container {
+    width: 100% !important;
+    font-size: 16px; }
   .register h2, .register .h2 {
     text-align: center; }
   .register {
     padding: 40px 0 !important; }
   .summary {
     margin-top: 0 !important;
-    width: 90% !important; } }
+    width: 90% !important; }
+  .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    align-content: center; }
+  .footer .socials {
+    justify-content: center; } }
