--- a/portfolio-website/scss/styles.scss
+++ b/portfolio-website/scss/styles.scss
@@ -25,6 +25,10 @@
   bottom: 50px;
 }
 
+.about-img {
+  width: 200px;
+}
+
 @media (max-width: 767px) {
   .header .social i {
     font-size: 30px;
@@ -32,5 +36,9 @@
 
   .header .roles {
     font-size: 18px !important;
+  }
+
+  .about-content {
+    flex-direction: column;
   }
 }
