--- a/portfolio-website/css/styles.css
+++ b/portfolio-website/css/styles.css
@@ -1,5 +1,5 @@
 .header {
-  background: #151515 url("../img/intro-bg.jpg") no-repeat center/cover;
+  background: #151515 url("../images/intro-bg.jpg") no-repeat center/cover;
   background-attachment: fixed; }
 
 .header::after {
@@ -27,6 +27,22 @@
   transform: scale(1.05);
   transition: all 0.5s ease-in-out;
   opacity: 0.8; }
+
+.services {
+  background: url("../images/bg.jpg") no-repeat center/cover;
+  background-attachment: fixed; }
+
+.services::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); }
+
+.services .position-relative {
+  z-index: 10; }
 
 @media (max-width: 767px) {
   .header .social i {
