--- a/portfolio-website/css/styles.css
+++ b/portfolio-website/css/styles.css
@@ -50,4 +50,11 @@
   .header .roles {
     font-size: 18px !important; }
   .about-content {
-    flex-direction: column; } }
+    flex-direction: column; }
+  .stats .stat {
+    border-right: 0 !important;
+    margin-bottom: 40px;
+    border-bottom: var(--bs-dark) solid 1px;
+    padding-bottom: 20px; }
+  .stats .last .stat {
+    border-bottom: none !important; } }
