--- a/portfolio-website/css/styles.css
+++ b/portfolio-website/css/styles.css
@@ -44,6 +44,13 @@
 .services .position-relative {
   z-index: 10; }
 
+.footer a {
+  text-decoration: none; }
+
+.footer .h-stack i:hover {
+  color: var(--secondary) !important;
+  transition: all 0.2s ease-in; }
+
 @media (max-width: 767px) {
   .header .social i {
     font-size: 30px; }
