--- a/yavin-office-design/css/styles.css
+++ b/yavin-office-design/css/styles.css
@@ -1,6 +1,14 @@
 .xl-text {
   font-size: 75px; }
 
+.navbar {
+  transition: all 0.5s ease-in-out; }
+
+.navbar-sticky {
+  background: #fff;
+  opacity: 0.9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
+
 .btn-outline-secondary {
   color: var(--bs-secondary);
   border: 1px solid var(--bs-secondary); }
