--- a/yavin-office-design/css/styles.css
+++ b/yavin-office-design/css/styles.css
@@ -28,6 +28,10 @@
   width: 500px;
   opacity: 0.7; }
 
+.details .decoration-star {
+  left: -200px;
+  width: 500px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
@@ -44,3 +48,7 @@
     width: 250px; }
   .header .image-contaienr {
     margin-top: 30px; } }
+
+@media (max-width: 576px) {
+  .details h2 {
+    text-align: center; } }
