--- a/yavin-office-design/css/styles.css
+++ b/yavin-office-design/css/styles.css
@@ -32,6 +32,10 @@
   left: -200px;
   width: 500px; }
 
+.details-2 .decoration-star {
+  right: -200px;
+  width: 500px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
@@ -52,7 +56,11 @@
     border-bottom: 1px #ccc solid;
     margin: 10px 0; }
   .services .right .col-md-4:last-child {
-    border: none; } }
+    border: none; }
+  .details-2 {
+    margin-top: 20px !important; }
+  .details-2 .decoration-star {
+    top: 300px; } }
 
 @media (max-width: 576px) {
   .details h2 {
