--- a/yavin-office-design/scss/styles.scss
+++ b/yavin-office-design/scss/styles.scss
@@ -40,9 +40,15 @@
   opacity: 0.7;
 }
 
-// Details
+// Details 1
 .details .decoration-star {
   left: -200px;
+  width: 500px;
+}
+
+// Details 1
+.details-2 .decoration-star {
+  right: -200px;
   width: 500px;
 }
 
@@ -85,6 +91,15 @@
 
   .services .right .col-md-4:last-child {
     border: none;
+  }
+
+  // Details 2
+  .details-2 {
+    margin-top: 20px !important;
+  }
+
+  .details-2 .decoration-star {
+    top: 300px;
   }
 }
 @media (max-width: 576px) {
