fixed styles sass typo

--- a/yavin-office-design/css/styles.css
+++ b/yavin-office-design/css/styles.css
@@ -50,7 +50,7 @@
   .header .decoration-star-2 {
     right: -100px;
     width: 250px; }
-  .header .image-contaienr {
+  .header .image-container {
     margin-top: 30px; }
   .services .col-md-4 {
     border-bottom: 1px #ccc solid;
