--- a/yavin-office-design/scss/styles.scss
+++ b/yavin-office-design/scss/styles.scss
@@ -46,10 +46,16 @@
   width: 500px;
 }
 
-// Details 1
+// Details 2
 .details-2 .decoration-star {
   right: -200px;
   width: 500px;
+}
+
+// Contact
+.contact .decoration-star {
+  left: -300px;
+  width: 600px;
 }
 
 // Media Queries
