--- a/yavin-office-design/css/styles.css
+++ b/yavin-office-design/css/styles.css
@@ -40,6 +40,9 @@
   left: -300px;
   width: 600px; }
 
+.footer a .fa-brands:hover {
+  color: var(--bs-primary) !important; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
