--- a/yavin-office-design/scss/styles.scss
+++ b/yavin-office-design/scss/styles.scss
@@ -63,6 +63,38 @@
   color: var(--bs-primary) !important;
 }
 
+// To-Top Button {
+.to-top-btn {
+  position: fixed;
+  z-index: 20;
+  bottom: 20px;
+  right: 20px;
+  opacity: 0;
+  width: 52px;
+  height: 52px;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  background-color: #44434a;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+
+.to-top-btn {
+  &:hover {
+    background-color: #1d1d1d;
+  }
+
+  img {
+    margin-bottom: 0.25rem;
+    width: 18px;
+  }
+}
+
+.show {
+  opacity: 1;
+}
+
 // Media Queries
 @media (max-width: 992px) {
   .xl-text {
