--- a/vera-software-solutions/scss/styles.scss
+++ b/vera-software-solutions/scss/styles.scss
@@ -15,6 +15,17 @@
   width: 24px;
 }
 
+// HR Heading
+.hr-heading {
+  display: inline-block;
+  width: 3.5rem;
+  height: 0.125rem;
+  margin-top: 0.6rem;
+  border: none;
+  background-color: var(--bs-primary);
+  opacity: 1;
+}
+
 @media (max-width: 992px) {
   // XL Text Size
   .xl-text {
