--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -1,6 +1,12 @@
 .xl-text {
   font-size: 65px; }
 
+.navbar {
+  transition: all 0.5s ease-in-out; }
+
+.navbar-sticky {
+  opacity: 0.8; }
+
 .header {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url("../images/header-background.jpg") no-repeat left center/cover;
   height: 600px; }
