--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -24,6 +24,11 @@
   background-color: var(--bs-primary);
   opacity: 1; }
 
+.details .vertical-decoration {
+  top: 0;
+  left: 0;
+  width: 24px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
