--- a/vera-software-solutions/scss/styles.scss
+++ b/vera-software-solutions/scss/styles.scss
@@ -42,6 +42,13 @@
   width: 24px;
 }
 
+// Details 2
+.details-2 .vertical-decoration {
+  top: 5%;
+  right: 0;
+  width: 24px;
+}
+
 @media (max-width: 992px) {
   // XL Text Size
   .xl-text {
