--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -29,6 +29,11 @@
   left: 0;
   width: 24px; }
 
+.details-2 .vertical-decoration {
+  top: 5%;
+  right: 0;
+  width: 24px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
