--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -98,6 +98,10 @@
     transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
     opacity: 0; } }
 
+.video-modal .modal-dialog {
+  max-width: 1150px;
+  margin-top: 20px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
