--- a/vera-software-solutions/scss/styles.scss
+++ b/vera-software-solutions/scss/styles.scss
@@ -122,6 +122,12 @@
   }
 }
 
+// Video Modal
+.video-modal .modal-dialog {
+  max-width: 1150px;
+  margin-top: 20px;
+}
+
 @media (max-width: 992px) {
   // XL Text Size
   .xl-text {
