--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -102,6 +102,10 @@
   max-width: 1150px;
   margin-top: 20px; }
 
+.project-modal .modal-dialog {
+  max-width: 1150px;
+  margin-top: 130px; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
