--- a/vera-software-solutions/scss/styles.scss
+++ b/vera-software-solutions/scss/styles.scss
@@ -128,6 +128,12 @@
   margin-top: 20px;
 }
 
+// Project Modals
+.project-modal .modal-dialog {
+  max-width: 1150px;
+  margin-top: 130px;
+}
+
 @media (max-width: 992px) {
   // XL Text Size
   .xl-text {
