--- a/vera-software-solutions/css/styles.css
+++ b/vera-software-solutions/css/styles.css
@@ -106,6 +106,9 @@
   max-width: 1150px;
   margin-top: 130px; }
 
+.footer a .fa-brands:hover {
+  color: var(--bs-primary) !important; }
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px; }
