--- a/vera-software-solutions/scss/styles.scss
+++ b/vera-software-solutions/scss/styles.scss
@@ -134,6 +134,11 @@
   margin-top: 130px;
 }
 
+// Footer
+.footer a .fa-brands:hover {
+  color: var(--bs-primary) !important;
+}
+
 @media (max-width: 992px) {
   // XL Text Size
   .xl-text {
